--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-hello world
+We hereby state, to the best of our knowledge and belief, 
+that we have NOT programmed this app to collect any personally identifiable information
