--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-We hereby state, to the best of our knowledge and belief, 
-that we have NOT programmed this app to collect any personally identifiable information
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h1><strong>PRIVACY POLICY</strong></h1>
+
+    <p>
+        We hereby state, to the best of our knowledge and belief, that we have NOT programmed this app to collect any personally identifiable information.
+    </p>
+</body>
+</html>
