--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1><strong>PRIVACY POLICY</strong></h1>
 
     <p>
-        We hereby state, to the best of our knowledge and belief, that we have NOT programmed this app to collect any personally identifiable information.
+        We, <strong>Eizuberg</strong>, as an App Developer, hereby state, to the best of our knowledge and belief, that we have NOT programmed this app to collect any personally identifiable information.
     </p>
 </body>
 </html>
